<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--Common-->
    <string name="delete">Delete</string>
    <string name="load">Load</string>
    <string name="swatches">Swatches</string>
    <string name="calibrating">Calibrating</string>
    <string name="name">Name</string>
    <string name="deleted">Deleted</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="warning">Warning</string>
    <string name="runTest">Run Test</string>
    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="start">Start</string>
    <string name="general">General</string>
    <string name="other">Other</string>

    <plurals name="dilutions">
        <item quantity="one">@string/noDilution</item>
        <item quantity="many">@string/timesDilution</item>
        <item quantity="other">@string/timesDilution</item>
    </plurals>

    <!--External-->
    <string name="sensor">Sensor</string>
    <string name="sensors">Sensors</string>

    <!--Sensor Details Screen-->
    <string name="deviceConnecting">Connecting to Device</string>

    <!--EC Sensor Calibration-->
    <string name="deviceConnectSensor">Connect sensor</string>
    <string name="calibratePoint">Calibrate %.0f μS/cm</string>
    <string name="calibrationSuccessful">Calibration Successful</string>
    <string name="sensorCalibrated">EC Sensor has been calibrated</string>
    <string name="celsius">°Celsius</string>
    <string name="dipSensorInSample">Dip sensor in sample</string>


    <string name="awaitingResult">Awaiting result</string>

    <string name="customTests">Custom tests</string>
    <string name="deviceConnected">Device connected</string>
    <string name="go">Go</string>
    <string name="saving">Saving</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="verifySensorDetails">Verify sensor details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
    <string name="ecSensorId">EC Sensor Id</string>

    <!--StripTest-->
    <string name="brightness">Brightness</string>
    <string name="measure_instruction">Put strip on black area with colour patches to the left. Hold camera above colour card until measurement is complete.</string>
    <string name="imageQuality">Image quality</string>
    <string name="shadows">Shadows</string>
    <string name="prepare_test">Prepare for test</string>
    <string name="taking_photo">Taking photo</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_for">Waiting for %s</string>
    <string name="success_quality_checks">Success! Quality check passed</string>
    <string name="prepareForCalibration">Prepare for calibration</string>
    <string name="stripTest">Strip Test</string>
    <string name="no_result">No Result</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="checking_image_quality">Checking image quality</string>
    <string name="seconds">Sec.</string>
    <string name="detecting_color_card">Looking for colour card</string>
    <string name="ready_for_photo">Ready for photo</string>
    <string name="noData">No data</string>
    <string name="error_calibrating">Calibration failed</string>
    <string name="qualityCheckFailed">Quality check failed</string>
    <string name="shadows_detected">Shadows/reflections detected</string>
    <string name="better_light_required">Better light required</string>
    <string name="tilt_camera_in_direction">Tilt camera in direction of arrow</string>
    <string name="move_camera_closer">Move camera closer to the card</string>
    <string name="avoid_shadows_on_card">Please avoid shadows on the card</string>

    <!--Sensor-->
    <string name="incorrectDevice">Incorrect Device</string>
    <string name="expectedDeviceNotFound">The expected sensor was not found.</string>
    <string name="connectCorrectSensor"><Data><![CDATA[Connect the <b>%s</b> sensor.]]></Data></string>

    <!--EC Sensor Calibration-->
    <string name="incorrectCalibrationCanAffect">Incorrect calibration can affect the proper functioning of the sensor</string>
    <string name="sensorNotFound">Sensor not found</string>
    <string name="cleanTheEcSensor">Clean the EC Sensor properly</string>
    <string name="getEcSolutionReady">Get ready the fluid with EC of %.0f μS/cm</string>
    <string name="dipEcSensorInSolution">Dip EC Sensor in the fluid and press Go</string>
    <string name="prepareSolutionsForCalibration">Prepare 6 solutions with these EC values</string>

    <!--Bluetooth-->
    <string name="nearby_devices">Nearby devices</string>
    <string name="connect_device">Connect to your device</string>
    <string name="to_turn_bluetooth_on">To turn bluetooth on:</string>
    <string name="connect">Connect</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="location_permission">Location permission is required for bluetooth connection</string>
    <string name="unknown_device">Unknown</string>
    <string name="scanning">Scanning…</string>
    <string name="searching_for_device">Searching for bluetooth devices</string>

    <string name="view_results">View results</string>

    <!--Manual-->
    <string name="take_photo_meter_result">Take a photo of the meter screen displaying the measurement result</string>
    <string name="enter_measured_value">Enter the measured value</string>
    <string name="us_cm">μS/cm</string>
    <string name="ms_cm">ms/cm</string>
    <string name="select_unit">Select unit</string>
    <string name="submitResult">Submit Result</string>
    <string name="take_photo_compartments">Take a photo of the compartment bag</string>

    <!--Software notices-->
    <string name="apache_license_2">Apache License 2.0</string>
    <string name="mit_license">MIT License</string>
    <string name="cca_share_license">CC BY-NC-SA 4.0 – International</string>
    <string name="cca_license">CC BY 4.0 International</string>
    <string name="eclipse_public_license">Eclipse Public License 1.0</string>
    <string name="experiment">Experiment</string>
    <string name="diagnostics_options">Diagnostic Options</string>
    <string name="coliformCount">Coliform Count</string>
    <string name="sendData">Send Data</string>
    <string name="diagnostics_info">Device Info</string>
    <string name="comments">Comments</string>

    <!--Update-->
    <string name="update">Update</string>
    <string name="updateAvailable">New version available. Update to get the most out of your app</string>
    <string name="remindLater">Remind later</string>

    <!--  Bluetooth -->
    <string name="title_not_connected">Not Connected</string>
    <string name="title_connected_to">connected to %1$s</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="graph">Graph</string>

    <string name="versionExpired">Version expired</string>
    <string name="thisVersionHasExpired">This version of the app has expired.</string>
    <string name="uninstallAndInstallFromStore">Please uninstall and then install the latest version from Play Store.</string>

    <string name="customDilution">Custom Dilution</string>
    <string name="enterDilutionFactor">Enter Dilution Factor</string>
    <string name="errorLoadingConfiguration">Could not load configuration information</string>
    <string name="cameraAndLocationPermissions">Camera &amp; location permissions are required</string>
</resources>