...
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="selectTest">Select Test</string>
    <string name="save">Save</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="instructions">Instructions</string>
    <string name="analyze">Analyse</string>
    <!-- Tests -->
    <string name="aluminum">.</string>
...
    <!-- About Screen -->
    <string name="copyrightMessage">Copyright © ffem</string>
    <string name="legalInformation">Legal Information</string>
    <!-- Software notices -->
    <string name="software_notices">Software Notices</string>
    <string name="software_incorporates_material">This software incorporates material from the projects listed below</string>
    <string name="navigate_up">Navigate up</string>
</resources>

